--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -1,13 +1,17 @@
 <loading-component [isLoading]="isLoading && !didInitOnce"></loading-component>
 
-<div class="row full-height" *ngIf="didLoadPageData">
-	<div class="col-xs-9 full-height right-margin padding-top-10px" customScroll>
-		<div class="row">
-			
-		</div>
-				
-	</div>
-	<div class="col-xs-3 full-height right-sidebar">
-		
-	</div>
+<div class="invoice-container">
+	<invoice-edit></invoice-edit>
+	<invoice-edit></invoice-edit>
+</div>
+<div class="invoice-operations-footer">
+
+	<item-list-navigator 
+		[totalNumberOfItems]="totalNumberOfInvoices" 
+		[maxNumberOfDisplayedItems]="invoiceNavigatorWindowSize" 
+		[numberOfSimultaneouslySelectedItems]="numberOfSimultaneouslyDisplayedInvoices"
+		(displayedItemsUpdated)="displayedInvoicesUpdated($event)">
+	</item-list-navigator>
+
+	<button class="btn btn-danger add-invoice-btn" type="button"><i class="fa fa-save"></i> {{ 'Add Invoice' | translate }}</button>
 </div>
