Hotel Operations - Out of service styling

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -930,6 +930,14 @@ td .room-categ-capacity {
     color: #bbbbbb;
 }
 
+.dark-gray {
+    background: #555;
+}
+
+.dark-gray-color {
+    color: #555;
+}
+
 .brown {
     background: #AD8D43;
 }
