--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -73,6 +73,8 @@
 		<div class="row">
 			<booking-cancel [bookingOperationsPageData]="bookingOperationsPageData" (onBookingCancel)="didChangeBooking($event)"></booking-cancel>
 		</div>
-		
+		<div class="row">
+			<booking-send-confirmation [bookingOperationsPageData]="bookingOperationsPageData"></booking-send-confirmation>
+		</div>
 	</div>
 </div>
