[T240] customer details editor

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
@@ -5,6 +5,11 @@
 		<div class="row">
 			<customer-preview [customerVM]="customerVM"></customer-preview>
 		</div>
+		<hr/>
+		<div class="row padding-top-5px">
+			<customer-details-editor [customerOperationsPageData]="customerOperationsPageData" (onCustomerDetailsChanged)="didChangeCustomer($event)"></customer-details-editor>
+		</div>
+		<hr/>
 				
 	</div>
 	<div class="col-xs-3 full-height right-sidebar">
