--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-preview/template/customer-preview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-preview/template/customer-preview.html
@@ -13,7 +13,7 @@
         </div>
         <div class="col-xs-12 col-sm-3 field-value text-field">
             <div class="form-group">
-                <div class="form-control operational-input-group">
+                <div class="form-control operational-input-group non-editable">
                     <span class="unitpal-font unitpal-large">{{customerVM.customerTypeFont}}</span>
                     <span class="name field-value">{{customerVM.customerTypeString | translate}}</span>
                 </div>
