--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
@@ -13,7 +13,7 @@
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs">
 					<li [ngClass]="{active : showBookingHistory}">
-						<a (click)="showBookingHistory=true"><i class="fa unitpal-font">E</i> {{'Booking History' | translate}}</a>
+						<a (click)="showBookingHistory=true"><i class="fa unitpal-font">E</i> {{'Booking History' | translate}} ({{ totalBookingsCount }})</a>
 					</li>
 					<li [ngClass]="{active : !showBookingHistory}">
 						<a (click)="showBookingHistory=false"><i class="fa unitpal-font">L</i> {{'Invoice History' | translate}}</a>
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 		<div class="row" [hidden]="!showBookingHistory">
-			<customer-booking-history [customerOperationsPageData]="customerOperationsPageData"></customer-booking-history>
+			<customer-booking-history [customerOperationsPageData]="customerOperationsPageData" (totalBookingsCountEmitter)="totalBookingsCount=$event"></customer-booking-history>
 		</div>
 		<div class="row" [hidden]="showBookingHistory">
 			<customer-invoice-history [customerOperationsPageData]="customerOperationsPageData"></customer-invoice-history>
