--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -1,17 +1,16 @@
 <loading-component [isLoading]="isLoading && !didInitOnce"></loading-component>
 
-<div class="invoice-container">
-	<invoice-edit></invoice-edit>
-	<invoice-edit></invoice-edit>
-</div>
-<div class="invoice-operations-footer">
+<div class="full-height" *ngIf="didInitOnce">
+	<div class="invoice-container">
+		<invoice-edit></invoice-edit>
+		<invoice-edit></invoice-edit>
+	</div>
+	<div class="invoice-operations-footer">
 
-	<item-list-navigator 
-		[totalNumberOfItems]="totalNumberOfInvoices" 
-		[maxNumberOfDisplayedItems]="invoiceNavigatorWindowSize" 
-		[numberOfSimultaneouslySelectedItems]="numberOfSimultaneouslyDisplayedInvoices"
-		(displayedItemsUpdated)="displayedInvoicesUpdated($event)">
-	</item-list-navigator>
+		<item-list-navigator [totalNumberOfItems]="totalNumberOfInvoices" [maxNumberOfDisplayedItems]="invoiceNavigatorWindowSize"
+			[numberOfSimultaneouslySelectedItems]="numberOfSimultaneouslyDisplayedInvoices" (displayedItemsUpdated)="displayedInvoicesUpdated($event)">
+		</item-list-navigator>
 
-	<button class="btn btn-danger add-invoice-btn" type="button"><i class="fa fa-save"></i> {{ 'Add Invoice' | translate }}</button>
+		<button class="btn btn-danger add-invoice-btn" type="button"><i class="fa fa-save"></i> {{ 'Add Invoice' | translate }}</button>
+	</div>
 </div>
