--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -40,7 +40,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-4">
 				<div class="row padding-bottom-5px">
-					<booking-room-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingRoomChanged)="didChangeRoomForBooking($event)"></booking-room-editor>
+					<booking-room-editor [bookingOperationsPageData]="bookingOperationsPageData" (onBookingRoomChanged)="didChangeBooking($event) && loadPageData()"></booking-room-editor>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-7">
@@ -71,10 +71,13 @@
 			<booking-reactivate [bookingOperationsPageData]="bookingOperationsPageData" (onBookingReactivate)="didChangeBooking($event)"></booking-reactivate>
 		</div>
 		<div class="row">
-			<booking-cancel [bookingOperationsPageData]="bookingOperationsPageData" (onBookingCancel)="didChangeBooking($event)"></booking-cancel>
+			<booking-cancel [bookingOperationsPageData]="bookingOperationsPageData" (onBookingCancel)="didChangeBooking($event) && loadPageData()"></booking-cancel>
 		</div>
 		<div class="row">
 			<booking-send-confirmation [bookingOperationsPageData]="bookingOperationsPageData"></booking-send-confirmation>
+		</div>
+		<div class="row">
+			<booking-links [bookingOperationsPageData]="bookingOperationsPageData"></booking-links>
 		</div>
 	</div>
 </div>
