[T238] small ui tweaks

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/send-confirmation/template/booking-send-confirmation.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/send-confirmation/template/booking-send-confirmation.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-sm-12" *ngIf="hasSendRight">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
-            <button type="button" class="btn btn-primary btn-block" (click)="send()"> 
+            <button type="button" class="btn btn-primary btn-block oneline-text" (click)="send()"> 
                 <i class="fa fa-envelope"></i>
                 {{ 'Send Confirmation' | translate }}
 			</button>
