--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
@@ -1,13 +1,12 @@
 <div class="col-xs-12 col-sm-12" *ngIf="hasRoom">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
-            <button type="button" class="btn btn-danger btn-block" (click)="viewRoom()"> 
+            <button type="button" class="btn btn-danger btn-block oneline-text" (click)="viewRoom()"> 
                 <i class="fa unitpal-font">@</i> 
-                <span class="oneline-text">{{ 'View' | translate }}
-                    <small>
-                        {{ bookingOperationsPageData.roomVM.room.name }}
-                    </small>
-                </span>
+                {{ 'View' | translate }}
+                <small>
+                    {{ bookingOperationsPageData.roomVM.room.name }}
+                </small>
 			</button>
         </div>
     </div>
@@ -15,17 +14,15 @@
 <div class="col-xs-12 col-sm-12" *ngIf="hasInvoice">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
-            <button type="button" class="btn btn-primary btn-block" (click)="viewInvoice()"> 
+            <button type="button" class="btn btn-primary btn-block oneline-text" (click)="viewInvoice()"> 
                 <i class="fa unitpal-font">L</i> 
-                <span class="oneline-text">
-                    {{ 'Invoice' | translate }}
-                    <small *ngIf="invoiceIsPaid">
-                        ({{ 'Paid' | translate }})
-                    </small>
-                    <small *ngIf="!invoiceIsPaid">
-                        {{ 'Unpaid' | translate }}
-                    </small>
-                </span>
+                {{ 'Invoice' | translate }}
+                <small *ngIf="invoiceIsPaid">
+                    ({{ 'Paid' | translate }})
+                </small>
+                <small *ngIf="!invoiceIsPaid">
+                    {{ 'Unpaid' | translate }}
+                </small>
 			</button>
         </div>
     </div>
