--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/cancel/template/booking-cancel.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/cancel/template/booking-cancel.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-sm-12" *ngIf="hasCancelRight">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
-            <button type="button" class="btn btn-danger btn-block" (click)="cancel()">
+            <button type="button" class="btn btn-danger btn-block oneline-text" (click)="cancel()">
 				<i *ngIf="isSaving" class="fa fa-spinner fa-pulse"></i> 
                 <i *ngIf="!isSaving" class="fa unitpal-font">M</i> 
                 {{ 'Cancel' | translate }}
