--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/reactivate/template/booking-reactivate.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/reactivate/template/booking-reactivate.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 col-sm-12" *ngIf="hasReactivateRight">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
-            <button type="button" class="btn btn-primary btn-block" (click)="reactivate()">
+            <button type="button" class="btn btn-primary btn-block oneline-text" (click)="reactivate()">
 				<i *ngIf="isSaving" class="fa fa-spinner fa-pulse"></i> 
                 <i *ngIf="!isSaving" class="fa unitpal-font">/</i> 
                 {{ 'Reactivate' | translate }}
