--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
@@ -70,7 +70,7 @@
     <hr/>
     <div class="row">
         <div class="col-xs-12 padding-top-5px" *ngIf="hasCheckedInBooking()">
-            <button type="button" class="btn btn-primary btn-block" (click)="checkOut()">
+            <button type="button" class="btn btn-primary btn-block oneline-text" (click)="checkOut()">
 				<i *ngIf="isCheckingOut" class="fa fa-spinner fa-pulse"></i> 
                 <i *ngIf="!isCheckingOut" class="fa unitpal-font">.</i> 
                 {{ 'Check Out' | translate }}
