[T238] small ui change

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
@@ -17,11 +17,11 @@
             <button type="button" class="btn btn-primary btn-block oneline-text" (click)="viewInvoice()"> 
                 <i class="fa unitpal-font">L</i> 
                 {{ 'Invoice' | translate }}
-                <small *ngIf="invoiceIsPaid">
+                <small class="uppercase" *ngIf="invoiceIsPaid">
                     ({{ 'Paid' | translate }})
                 </small>
-                <small *ngIf="!invoiceIsPaid">
-                    {{ 'Unpaid' | translate }}
+                <small class="uppercase" *ngIf="!invoiceIsPaid">
+                    ({{ 'Unpaid' | translate }})
                 </small>
 			</button>
         </div>
