--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/template/arrivals-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/template/arrivals-pane.html
@@ -4,7 +4,7 @@
 		<div class="flex-row">
 			<span class="unitpal-font orange-color p-r-12 f-32">/</span>
 			<div class="">
-				<div class="f-12">Arrivals</div>
+				<div class="f-12">{{ 'Arrivals' | translate}}</div>
 				<div *ngIf="selectedDate" class="current-date f-16"><b>{{getDateShortString()}}</b></div>
 			</div>
 		</div>
