--- a/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
+++ b/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
@@ -12,7 +12,7 @@
 	<div class="clearfix"></div>
 	<div class="separator">
 		<p class="change_link">{{ "Remember your password ?" | translate }}
-			<a [routerLink]="['/LogInComponent']" class="to_register"> {{ "Log In" | translate }} </a>
+			<a [routerLink]="['/']" class="to_register"> {{ "Log In" | translate }} </a>
 		</p>
 		<external-footer-component></external-footer-component>
 	</div>
