--- a/assets/client/src/pages/external/pages/sign-up/template/sign-up-component.html
+++ b/assets/client/src/pages/external/pages/sign-up/template/sign-up-component.html
@@ -43,7 +43,7 @@
 	<div class="clearfix"></div>
 	<div class="separator">
 		<p class="change_link">{{ "Back to " | translate }}
-			<a [routerLink]="['/LogInComponent']" class="to_register"> {{ "Log In" | translate }} </a>
+			<a [routerLink]="['/']" class="to_register"> {{ "Log In" | translate }} </a>
 		</p>
 		<external-footer-component></external-footer-component>
 	</div>
