--- a/assets/client/src/pages/internal/containers/home/pages/utils/header/subcomponents/settings/template/header-settings.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/header/subcomponents/settings/template/header-settings.html
@@ -3,7 +3,7 @@
 </a>
 <ul class="dropdown-menu animated fadeInDown pull-right">
 	<li>
-		<a [routerLink]="['/MainHomeComponent/SettingsContainerComponent']">
+		<a [routerLink]="['/settings']">
 									{{ 'Settings' | translate }}
 								</a>
 	</li>
