--- a/views/external.ejs
+++ b/views/external.ejs
@@ -49,6 +49,17 @@
 			System.import('external').catch(function(err){ console.error(err); });
 		</script>
 	<%}%>
+	<%if (googleAnalyticsEnabled) {%>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+			
+			var googleAnalyticsTrackingId = '<%=googleAnalyticsTrackingId%>';
+			ga('create', googleAnalyticsTrackingId, 'auto');
+		</script>
+	<%}%>
 
 </head>
 
