invoice operations [WIP]

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -1,9 +1,10 @@
 <div class="invoice-edit-container full-height">
     <p class="invoice-title">
-        Invoice #1
+        Invoice #{{ invoiceIndex + 1 }}
     </p>
 
-    <invoice-payer></invoice-payer>
+    <invoice-payer *ngFor="let invoicePayer of invoicePayerList; let invoicePayerIndex = index" [invoiceIndex]="invoiceIndex" [invoicePayerIndex]="invoicePayerIndex"></invoice-payer>
+    
     <p class="btn-add-invoice-payer">
         <th-button [upFont]="'\''" [text]="'Add Payer'" (onButtonClick)="openCustomerSelectModal()"></th-button>
     </p>
