--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-payer/template/invoice-payer.html
@@ -1,29 +1,31 @@
-<table class="table table-invoice-payer">
-    <tbody>
-        <tr class="row-actions">
-            <td width="50%" class="customer-container">
-                <i class="fa fa-2x unitpal-font">(</i> <b>Customer</b>
-            </td>
-            <td width="50%" class="print-container">Print & Send <i class="fa fa-print" aria-hidden="true"></i></td>
-        </tr>
-    </tbody>
-</table>
-<table class="table table-invoice-payer">
-    <tbody>
-        <tr class="row-payment">
-            <td width="30%"></td>
-            <td width="20%" class="amount-paid-container">
-                <div class="input-group">
-                    <span class="input-group-addon"><span>€</span></span>
-                    <input class="form-control" type="number">
-                </div>
-            </td>
-            <td width="15%" class="amount-paid-container">
-                <span>of <b>€ 2000</b></span>
-            </td>
-            <td width="30%" class="payment-method-container">
-                <div class="input-group">
-                    <select class="form-control">
+<div class="invoice-payer-container">
+    <table class="table table-invoice-payer">
+        <tbody>
+            <tr class="row-actions">
+                <td width="50%" class="customer-container">
+                    <a class="clickable-item" (click)="goToCustomer(invoicePayerVM.customerDO)"><i class="fa fa-2x unitpal-font">(</i> <b>{{invoicePayerVM.customerDO.customerName}}</b></a>
+                    <a class="clickable-item m-l-12" (click)="openCustomerSelectModal()"><i class="fa unitpal-font">]</i> {{ 'Change' | translate }}</a>
+                </td>
+                <td width="50%" class="print-container"><a class="clickable-item">{{ 'Print & Send' | translate }} <i class="fa fa-print" aria-hidden="true"></i></a></td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-invoice-payer">
+        <tbody>
+            <tr class="row-payment">
+                <td width="30%"></td>
+                <td width="20%" class="amount-paid-container">
+                    <div class="input-group">
+                        <span class="input-group-addon"><span>{{invoicePayerVM.ccy.symbol}}</span></span>
+                        <input class="form-control" type="number" [(ngModel)]="invoicePayerVM.invoicePayerDO.priceToPay">
+                    </div>
+                </td>
+                <td width="15%" class="amount-paid-container">
+                    <span>{{ 'of' | translate }} <b>{{invoicePayerVM.ccy.symbol}} {{invoicePayerVM.totalAmount}}</b></span>
+                </td>
+                <td width="30%" class="payment-method-container">
+                    <div class="input-group">
+                        <select class="form-control">
                         <option value="0: Object">Cash</option>
                         <option value="1: Object">Visa</option>
                         <option value="2: Object">American Express</option>
@@ -33,8 +35,9 @@
                         <option value="6: Object">Maestro</option>
                         <option value="7: Object">Discover</option>
                     </select>
-                </div>
-            </td>
-        </tr>
-    </tbody>
-</table>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
