--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/customer-operations/template/customer-operations-page.html
@@ -13,10 +13,10 @@
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs">
 					<li [ngClass]="{active : showBookingHistory}">
-						<a (click)="showBookingHistory=true"><i class="fa unitpal-font">E</i> {{'Booking History' | translate}} ({{ totalBookingsCount }})</a>
+						<a (click)="showBookingHistory=true"><i class="fa unitpal-font">E</i> {{'Booking History' | translate}} <span *ngIf="totalBookingsCount">({{ totalBookingsCount }})</span></a>
 					</li>
 					<li [ngClass]="{active : !showBookingHistory}">
-						<a (click)="showBookingHistory=false"><i class="fa unitpal-font">L</i> {{'Invoice History' | translate}} ({{ totalInvoiceGroupsCount }})</a>
+						<a (click)="showBookingHistory=false"><i class="fa unitpal-font">L</i> {{'Invoice History' | translate}} <span *ngIf="totalInvoiceGroupsCount">({{ totalInvoiceGroupsCount }})</span></a>
 					</li>
 				</ul>
 			</div>
@@ -29,6 +29,17 @@
 		</div>
 	</div>
 	<div class="col-xs-3 full-height right-sidebar">
-		
+		<div class="row padding-top-10px">
+			<div class="col-xs-12 col-sm-12">
+				<div class="row">
+					<div class="col-xs-12 padding-top-5px">
+						<button type="button" class="btn btn-primary btn-block oneline-text" (click)="createInvoice()"> 
+							<i class="fa unitpal-font">L</i> 
+							{{ 'Create Invoice' | translate }}
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
